--- a/css/styles.css
+++ b/css/styles.css
@@ -601,7 +601,7 @@ body {
 /* Wave animation for footer */
 .wave-animation {
   position: absolute;
-  top: -100px;
+  top: 0px !important;
   left: 0;
   width: 100%;
   height: 100px;
